--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,4 +1,3 @@
-http://cdn2.testdouble.com/webfonts/sourcesanspro-regular-webfont-3f729ea25827ae4d0cfc30f133d436d9.woff
 @font-face {
   font-family: 'Source Sans Pro';
   src: url(http://cdn2.testdouble.com/webfonts/sourcesanspro-light-webfont-2609bf36c9ef4ab89f0ba2b407221027.eot);
@@ -6,7 +5,6 @@ http://cdn2.testdouble.com/webfonts/sourcesanspro-regular-webfont-3f729ea25827ae
   font-weight: 300;
   font-style: normal
 }
-
 @font-face {
   font-family: 'Source Sans Pro';
   src: url(http://cdn2.testdouble.com/webfonts/sourcesanspro-regular-webfont-acbd8662312780844af53129bc333afc.eot);
@@ -14,7 +12,6 @@ http://cdn2.testdouble.com/webfonts/sourcesanspro-regular-webfont-3f729ea25827ae
   font-weight: 400;
   font-style: normal
 }
-
 @font-face {
   font-family: 'Source Sans Pro';
   src: url(http://cdn2.testdouble.com/webfonts/sourcesanspro-semibold-webfont-afe9a790a28d6eff8c31295c01d914f0.eot);
@@ -28,13 +25,11 @@ http://cdn2.testdouble.com/webfonts/sourcesanspro-regular-webfont-3f729ea25827ae
 }
 
 
-html {
-  background: white url(http://cdn2.testdouble.com/img/home-bg@2x-9327f93692221bea6a2137b4ed2b1c7f.jpg) 0 0 / cover no-repeat;
-  color: black;
-  border: 13px solid #75fe04;
-  font: 400 12px/1.5 'Source Sans Pro', sans-serif;
-}
 
+html {
+  font: 400 75%/1.5 'Source Sans Pro', sans-serif;
+  color: white;
+}
 html::before {
   content: "";
   position: absolute;
@@ -44,7 +39,6 @@ html::before {
   height: 38px;
   background: url(http://cdn2.testdouble.com/img/home-logo-73d7afa00c7929e810d84c043254b51a.png) no-repeat 0 0;
 }
-
 html::after {
   content: "We like to write nice code.\AYou look great today.";
   display: block;
@@ -52,25 +46,26 @@ html::after {
   top: 50%;
   width: 100%;
   margin-top: -50px;
-  color: white;
   font: 300 italic 30px/35px 'Source Sans Pro', sans-serif;
   text-align: center;
   white-space: pre;
 }
 html::first-line {
-  color: white;
   font: 300 normal 30px/35px 'Source Sans Pro', sans-serif;
 }
 
+
+
 head {
   display: block;
-  white-space: pre;
-  color: white;
-  font: 600 15px/1.5 'Source Sans Pro', sans-serif;
-  height: 0;
-  width: 0;
-}
+  height: 100%;
+  width: 100%;
+  background: white url(http://cdn2.testdouble.com/img/home-bg@2x-9327f93692221bea6a2137b4ed2b1c7f.jpg) 0 0 / cover no-repeat;
+  border: 13px solid #75fe04;
 
+  white-space: pre;
+  font: 600 1.25em 'Source Sans Pro', sans-serif;
+}
 head::before {
   content: "Writing nice code since 2011.\A We're Test Double. It's nice to meet you.";
   position: absolute;
@@ -78,19 +73,31 @@ head::before {
   left: 2.25em;
 }
 
-head::after {
+
+
+body {
+  position: relative;
+  height: -webkit-min-content;
+  color: black;
+  border: 13px solid #75fe04;
+  border-top-width: 1px;
+  margin: 0;
+  box-sizing: content-box;
+}
+body::before {
+  content: "We develop apps. Great ones that in a beautifully simple way solve complex business problems. That's what makes Test Double special. Well, that and the fact that we're quite friendly and have a knack for building great partnerships.";
+  display: block;
+  position: relative;
+  font: 300 3em 'Source Sans Pro';
+  text-align: center;
+  margin: 2.5em;
+}
+body::after {
   content: "614.349.4279\A hello@testdouble.com\A Columbus, Ohio";
   white-space: pre;
   position: absolute;
   bottom: 2.5em;
   right: 2.25em;
   text-align: right;
-  /* text-shadow: black 0 0 3px; */
   color: black;
-}
-
-
-
-body::after {
-  content: "We develop apps. Great ones that in a beautifully simple way solve complex business problems. That's what makes Test Double special. Well, that and the fact that we're quite friendly and have a knack for building great partnerships.";
 }
