--- a/app/css/style.css
+++ b/app/css/style.css
@@ -69,11 +69,11 @@ head::before, head::after {
   background: transparent 100% 100% no-repeat;
 }
 head::before {
-  background-image: url(/img/logo.png);
+  background-image: url(/img/logo.svg);
 }
 head::after {
   top: 100%;
-  background-image: url(/img/logo.png);
+  background-image: url(/img/logo-dark.svg);
 }
 
 
